refactor streamlets